--- a/Site(gallery).html
+++ b/Site(gallery).html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KURS</title>
+    <link rel="stylesheet" href="gallery.css">
 <style>
      .bg {background: url(..//kurs/Site/header.jpg) no-repeat center top/cover; height:130px; width: 100%;}
    * {
@@ -18,17 +19,7 @@
     .text {
         float: left; padding-top: 25px; padding-left: 40px;
     }
-    .SocialNet {
-       float:right; padding-right: 10px;
-    }
-    table {
-        width: 100%;
-        padding-left:10px;
-        padding-top: 50px;
-    }
-    td, th {
-     padding: 10px;
-    }
+
 @font-face
    {
     font-family: FONT;
@@ -70,31 +61,26 @@
         <div class= "bg_1">
             <table >
                 <tr>
-                    <th>
-                     <img src = "Site/images/3.jpg" height="500px">
-                    </th>
-                    <th>
-                     <img src = "Site/images/IMG_5212.jpg" height="500px">
-                 </th>
-                 <th>
-                     <img src = "Site/images/3_1.jpg"height="500px">
-                 </th>
+                    <th><img src = "Site/images/3.jpg" height="500px"></th>
+                    <th><img src = "Site/images/IMG_5212.jpg" height="500px"></th>
+                    <th><img src = "Site/images/3_1.jpg"height="500px"></th>
                 </tr>
                 <tr>
-                 <th>
-                     <img src = "Site/images/1.jpg" height="500px">
-                 </th>
-                 <th>
-                     <img src = "Site/images/IMG_5128 с облаками.jpg" height="500px">
-              </th>
-              <th>
-                 <img src = "Site/images/6.jpg" height="500px">
-              </th>
-             </tr>
+                    <th><img src = "Site/images/1.jpg" height="500px"></th>
+                    <th><img src = "Site/images/IMG_5128 с облаками.jpg" height="500px"></th>
+                    <th><img src = "Site/images/6.jpg" height="500px"></th>
+                </tr>
             </table> 
         </div>
-        <h1></h1>
-
+        <div>
+        <ul>
+            <li><a href=""></a></li>    
+            <li><a href=""></a></li>    
+            <li><a href=""></a></li>    
+            <li><a href=""></a></li>    
+        </ul>
+        </div>
+        
     </body>
 
 </html>
