--- a/Site(gallery).html
+++ b/Site(gallery).html
@@ -1,86 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KURS</title>
-    <link rel="stylesheet" href="gallery.css">
-<style>
-     .bg {background: url(..//kurs/Site/header.jpg) no-repeat center top/cover; height:130px; width: 100%;}
-   * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  .bg_1 {background: url(..//kurs/Site/images/неблюр.jpg) no-repeat center top/cover; width: 100%;}
-    .logo {
-        float: left;
-    }
-    .text {
-        float: left; padding-top: 25px; padding-left: 40px;
-    }
-
-@font-face
-   {
-    font-family: FONT;
-    src: url(..//kurs/Site/FONTs/JUSTICE\LEAGUE.ttf); 
-    font-family: FONT2;
-    src: url(..//kurs/Site/FONTs/trebucbd.ttf);
-   }
-  
-  h2 {
-    font-family: FONT2, 'trebucbd'; font-size: 60px; color: rgba(255, 255, 255, 0.938); text-shadow:rgba(177, 44, 238, 0.938) 0 0 60px;
-   }
-</style>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>KURS</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
  
     <body>
-        <header class="bg">
-            <div class ="logo">
-                <a href="file:///C:/Users/Xiaomi/Documents/GitHub/kurs/index.html">
-                <img src="Site/logo_static.png" style=" padding-left: 90px; padding-top: 20px;" width="200px">
-            </a>
+        <header class="bg_general">
+            <div class ="logo_general">
+                <a href="file:///C:/Users/Xiaomi/Documents/GitHub/kurs/Site(home).html"> <img src="Site/logo_static.png" style="width: 130px;"></a>
             </div>
-            <div class = "text">
-                <h2>Portfolio
-                </h2>
+            <div class = "text_gallery">
+                <h2>Portfolio</h2>
             </div>
             <div class="SocialNet">  
-               <a href="https://www.instagram.com/_lezhik_ph_/">
-                <img src="Site/SocialNet/Instagram.png" >
-            </a> 
-            <a href="https://www.facebook.com/profile.php?id=100004142117968">
-                <img src="Site/SocialNet/facebook.png" >
-                </a>
-            <a href="https://t.me/I_lezhik_I">
-                <img src="Site/SocialNet/telegrgam.png" >
-                </a>
-                </div> 
-              
+                <a href="https://www.instagram.com/_lezhik_ph_/"> <img src="Site/SocialNet/Instagram.png" ></a> 
+                <a href="https://www.facebook.com/profile.php?id=100004142117968"> <img src="Site/SocialNet/facebook.png"></a>
+                <a href="https://t.me/I_lezhik_I"> <img src="Site/SocialNet/telegrgam.png"></a>
+            </div>      
         </header>
-        <div class= "bg_1">
-            <table >
-                <tr>
-                    <th><img src = "Site/images/3.jpg" height="500px"></th>
-                    <th><img src = "Site/images/IMG_5212.jpg" height="500px"></th>
-                    <th><img src = "Site/images/3_1.jpg"height="500px"></th>
-                </tr>
-                <tr>
-                    <th><img src = "Site/images/1.jpg" height="500px"></th>
-                    <th><img src = "Site/images/IMG_5128 с облаками.jpg" height="500px"></th>
-                    <th><img src = "Site/images/6.jpg" height="500px"></th>
-                </tr>
-            </table> 
-        </div>
-        <div>
-        <ul>
-            <li><a href=""></a></li>    
-            <li><a href=""></a></li>    
-            <li><a href=""></a></li>    
-            <li><a href=""></a></li>    
-        </ul>
-        </div>
-        
+            <div class= "bg_gallery">
+                <table>
+                    <tr>
+                        <th><img src = "Site/images/3.jpg" height="500px"></th>
+                        <th><img src = "Site/images/IMG_5212.jpg" height="500px"></th>
+                        <th><img src = "Site/images/3_1.jpg"height="500px"></th>
+                    </tr>
+                    <tr>
+                        <th><img src = "Site/images/1.jpg" height="500px"></th>
+                        <th><img src = "Site/images/IMG_5128 с облаками.jpg" height="500px"></th>
+                        <th><img src = "Site/images/6.jpg" height="500px"></th>
+                    </tr>
+                </table> 
+            </div>
     </body>
-
 </html>
