--- a/Site(about.me).html
+++ b/Site(about.me).html
@@ -11,26 +11,25 @@
  <body>
      <header class="bg_general">
         <div class ="logo_general">
-            <a href="file:///C:/Users/Xiaomi/Documents/GitHub/kurs/Site(home).html"> <img src="Site/logo_static.png" style="width: 130px;"></a>
+            <a href="file:///C:/Users/Xiaomi/Documents/GitHub/kurs/Site(home).html"> <img src="Site/logo_static.png" alt="logo" style="width: 130px;"></a>
         </div>
         <div class = "text_gallery">
             <h2>About Me</h2>
         </div>
         <div class="SocialNet">  
-            <a href="https://www.instagram.com/_lezhik_ph_/"> <img src="Site/SocialNet/Instagram.png" ></a> 
-            <a href="https://www.facebook.com/profile.php?id=100004142117968"> <img src="Site/SocialNet/facebook.png"></a>
-            <a href="https://t.me/I_lezhik_I"> <img src="Site/SocialNet/telegrgam.png"></a>
-        </div>      
+            <a href="https://www.instagram.com/_lezhik_ph_/"> <img src="Site/SocialNet/Instagram.png" alt="instagram"></a> 
+            <a href="https://www.facebook.com/profile.php?id=100004142117968"> <img src="Site/SocialNet/facebook.png" alt="facebook"></a>
+            <a href="https://t.me/I_lezhik_I"> <img src="Site/SocialNet/telegrgam.png" alt="telegram"></a>
+          </div>    
     </header>
-    <div class= "bg_aboutme">
-        <p class= "info_aboutme"> 
-            <img src="Site/images/AboutMe.png" class="bg_sm"> 
-            <h4 style="font-size: 30px; color:rgba(177, 44, 238, 0.938);"> Oleg Petrov </h4>
-            <p><h4 style="padding-top: 50px;">Hi! My name is Oleg, but my friends call me take a photo of them!
-                <p style= "padding-top: 20px"> My home is Ukraine. I am studying in Kharkiv Politechnikal University.</p>
-                <p style= "padding-top: 20px"> DM me if you want the best photos on the Earth!</p> </h4>
-            </p>      
-        </p>
-    </div>
-
-</body>
+        <div class= "bg_aboutme">
+            <p class= "info_aboutme"> 
+                <img src="Site/images/AboutMe.png" alt="about me" class="bg_sm"> 
+                <h4 style="font-size: 30px; color:rgba(177, 44, 238, 0.938);"> Oleg Petrov </h4>
+                <h4 style="padding-top: 50px;">Hi! My name is Oleg, but my friends call me take a photo of them!</h4>
+                <h4 style= "padding-top: 20px"> My home is Ukraine. I am studying in Kharkiv Politechnikal University.</h4>
+                <h4 style= "padding-top: 20px"> DM me if you want the best photos on the Earth!</h4>    
+        </div>
+        <footer> <b>Photographer Oleg Petrov </b><b> KHPI Group KIT-218b </b><b> Data: 20.10.2020</b> </footer>
+    </body>
+</html>
