--- a/Site(gallery).html
+++ b/Site(gallery).html
@@ -10,30 +10,31 @@
     <body>
         <header class="bg_general">
             <div class ="logo_general">
-                <a href="file:///C:/Users/Xiaomi/Documents/GitHub/kurs/Site(home).html"> <img src="Site/logo_static.png" style="width: 130px;"></a>
+                <a href="file:///C:/Users/Xiaomi/Documents/GitHub/kurs/Site(home).html"> <img src="Site/logo_static.png" alt="logo" style="width: 130px;"></a>
             </div>
             <div class = "text_gallery">
                 <h2>Portfolio</h2>
             </div>
             <div class="SocialNet">  
-                <a href="https://www.instagram.com/_lezhik_ph_/"> <img src="Site/SocialNet/Instagram.png" ></a> 
-                <a href="https://www.facebook.com/profile.php?id=100004142117968"> <img src="Site/SocialNet/facebook.png"></a>
-                <a href="https://t.me/I_lezhik_I"> <img src="Site/SocialNet/telegrgam.png"></a>
-            </div>      
+                <a href="https://www.instagram.com/_lezhik_ph_/"> <img src="Site/SocialNet/Instagram.png" alt="instagram"></a> 
+                <a href="https://www.facebook.com/profile.php?id=100004142117968"> <img src="Site/SocialNet/facebook.png" alt="facebook"></a>
+                <a href="https://t.me/I_lezhik_I"> <img src="Site/SocialNet/telegrgam.png" alt="telegram"></a>
+              </div>  
         </header>
             <div class= "bg_gallery">
                 <table>
                     <tr>
-                        <th><img src = "Site/images/3.jpg" height="500px"></th>
-                        <th><img src = "Site/images/IMG_5212.jpg" height="500px"></th>
-                        <th><img src = "Site/images/3_1.jpg"height="500px"></th>
+                        <th><img src = "Site/images/3.jpg" alt="1" height="500px"></th>
+                        <th><img src = "Site/images/IMG_5212.jpg" alt="2" height="500px"></th>
+                        <th><img src = "Site/images/3_1.jpg" alt="3" height="500px"></th>
                     </tr>
                     <tr>
-                        <th><img src = "Site/images/1.jpg" height="500px"></th>
-                        <th><img src = "Site/images/IMG_5128 с облаками.jpg" height="500px"></th>
-                        <th><img src = "Site/images/6.jpg" height="500px"></th>
+                        <th><img src = "Site/images/1.jpg" alt="4" height="500px"></th>
+                        <th><img src = "Site/images/IMG_5128 с облаками.jpg" alt="5" height="500px"></th>
+                        <th><img src = "Site/images/6.jpg" alt="6" height="500px"></th>
                     </tr>
                 </table> 
             </div>
+        <footer> <b>Photographer Oleg Petrov </b><b> KHPI Group KIT-218b </b><b> Data: 20.10.2020</b> </footer>
     </body>
 </html>
