--- a/Site(home).html
+++ b/Site(home).html
@@ -10,15 +10,15 @@
 <body>
     <header class="bg_home">
         <div class ="logo_home"> 
-          <img src="Site/logo_static.png" alt="logo" style="width: 160px;">            
+          <img src="Site/logo_static.png" style="width: 160px;"></a>             
         </div>
         <div class="SocialNet">  
-          <a href="https://www.instagram.com/_lezhik_ph_/"> <img src="Site/SocialNet/Instagram.png" alt="instagram"></a> 
-          <a href="https://www.facebook.com/profile.php?id=100004142117968"> <img src="Site/SocialNet/facebook.png" alt="facebook"></a>
-          <a href="https://t.me/I_lezhik_I"> <img src="Site/SocialNet/telegrgam.png" alt="telegram"></a>
+          <a href="https://www.instagram.com/_lezhik_ph_/"> <img src="Site/SocialNet/Instagram.png" ></a> 
+          <a href="https://www.facebook.com/profile.php?id=100004142117968"> <img src="Site/SocialNet/facebook.png"></a>
+          <a href="https://t.me/I_lezhik_I"> <img src="Site/SocialNet/telegrgam.png"></a>
         </div> 
         <div class="text_home">
-          <h3> PHOTOGRAPHER / VIDEOGRAPHER</h3>
+          <h3> PHOTOGRAPHER / VIDEOGRAPHER</h2>
           <h1> Oleg Petrov<br>prod.</h1>
         </div>
        
@@ -30,6 +30,5 @@
           </ul>
         </div>    
     </header>
-    <footer> <b>Photographer Oleg Petrov </b><b> KHPI Group KIT-218b </b><b> Data: 20.10.2020</b> </footer>
 </body>
 </html>
