--- a/Site(home).html
+++ b/Site(home).html
@@ -6,52 +6,29 @@
     <title>KURS</title>
     <link rel="stylesheet" href="styles.css">
 
-  <style>
-  </style>
-
 </head>
 <body>
-  <!--Preloader animation -->
-  
- <!-- <div id="loader"> 
-    <img src="Site/logo.gif" width="30%">
-  </div>
-  <script type="text/javascript">
-  var loader = document.getElementById("loader") ;
-  window.addEventListener("load", function(){
-    loader.style.height = "100px";
-    loader.style.width = "100px";
-    loader.style.borderRadius ="50%";
-    loader.style.visibility= "hidden";
-  } )
-  </script> --> 
-    <header class="bg_hat">
-       <div class="SocialNet">  
-            <a href="https://www.instagram.com/_lezhik_ph_/"> <img src="Site/SocialNet/Instagram.png" style="height: 70px; padding-right: 10px;"></a> 
-            <a href="https://www.facebook.com/profile.php?id=100004142117968"> <img src="Site/SocialNet/facebook.png"style="height: 70px; padding-right: 10px;"></a>
-            <a href="https://t.me/I_lezhik_I"> <img src="Site/SocialNet/telegram.png"style="height: 70px;"></a>
-        </div>  
-        <div class = "logo"> 
-          <img src="Site/logo_static.png" style="width: 130px;">
-        </div>  
-        <div class="title">
-          <h3> PHOTOGRAPHER / VIDEOGRAPHER</h3>
-          <h1> Oleg Petrov</h1>
+    <header class="bg_home">
+        <div class ="logo_home"> 
+          <img src="Site/logo_static.png" style="width: 160px;"></a>             
         </div>
-        <div class="Pages" >
+        <div class="SocialNet">  
+          <a href="https://www.instagram.com/_lezhik_ph_/"> <img src="Site/SocialNet/Instagram.png" ></a> 
+          <a href="https://www.facebook.com/profile.php?id=100004142117968"> <img src="Site/SocialNet/facebook.png"></a>
+          <a href="https://t.me/I_lezhik_I"> <img src="Site/SocialNet/telegrgam.png"></a>
+        </div> 
+        <div class="text_home">
+          <h3> PHOTOGRAPHER / VIDEOGRAPHER</h2>
+          <h1> Oleg Petrov<br>prod.</h1>
+        </div>
+       
+        <div class="Pages_home" >
           <ul>
             <li><a href="file:///C:/Users/Xiaomi/Documents/GitHub/kurs/Site(gallery).html"> <h2>Portfolio</h2></a> </li>    
-            <li><a href="file:///C:/Users/Xiaomi/Documents/GitHub/kurs/Site(about.me).html"><h2>About Me</h2></a> </li>    
-            <li><a href="file:///C:/Users/Xiaomi/Documents/GitHub/kurs/Site(contact).html"><h2>Contact</h2></a> </li>    
+            <li><a href="file:///C:/Users/Xiaomi/Documents/GitHub/kurs/Site(gallery).html"><h2>About Me</h2></a> </li>    
+            <li><a href=""><h2>Contact</h2></a> </li>    
           </ul>
         </div>    
     </header>
-    <div class="bg">
-
-    </div>
-    <footer>
-      <h5>© 2020. Oleg Petrov Prod. KHPI.</h5>
-    </footer>
 </body>
-
 </html>
