--- a/Site(home).html
+++ b/Site(home).html
@@ -8,8 +8,29 @@
 
   <style>
   </style>
-
 </head>
+
+<header>
+  <div class="SocialNet">  
+    <a href="https://www.instagram.com/_lezhik_ph_/"> <img src="Site/images/General/SocialNet/Instagram.png" style="height: 70px; padding-right: 10px;"></a> 
+    <a href="https://www.facebook.com/profile.php?id=100004142117968"> <img src="Site/images/General/SocialNet/facebook.png"style="height: 70px; padding-right: 10px;"></a>
+    <a href="https://t.me/I_lezhik_I"> <img src="Site/images/General/SocialNet/telegram.png"style="height: 70px;"></a>
+</div>    
+<div class ="logo">
+  <a href="Site(home).html"> <img src="Site/images/General/logo/logo_static.png" style="width: 130px;"></a>
+</div> 
+   <div class="title">
+     <h3> PHOTOGRAPHER / VIDEOGRAPHER</h3>
+     <h1> Oleg Petrov</h1>
+   </div>
+   <div class="Pages" >
+    <ul>
+      <li><a href="Site(gallery).html"> <h2>Portfolio</h2></a> </li>    
+      <li><a href="Site(about.me).html"><h2>About Me</h2></a> </li>    
+      <li><a href="Site(contact).html"><h2>Contact</h2></a> </li>    
+    </ul>
+  </div>    
+</header>
 <body>
   <!--Preloader animation -->
   
@@ -25,32 +46,8 @@
     loader.style.visibility= "hidden";
   } )
   </script> --> 
-    <header class="bg_hat">
-       <div class="SocialNet">  
-            <a href="https://www.instagram.com/_lezhik_ph_/"> <img src="Site/SocialNet/Instagram.png" style="height: 70px; padding-right: 10px;"></a> 
-            <a href="https://www.facebook.com/profile.php?id=100004142117968"> <img src="Site/SocialNet/facebook.png"style="height: 70px; padding-right: 10px;"></a>
-            <a href="https://t.me/I_lezhik_I"> <img src="Site/SocialNet/telegram.png"style="height: 70px;"></a>
-        </div>  
-        <div class = "logo"> 
-          <img src="Site/logo_static.png" style="width: 130px;">
-        </div>  
-        <div class="title">
-          <h3> PHOTOGRAPHER / VIDEOGRAPHER</h3>
-          <h1> Oleg Petrov</h1>
-        </div>
-        <div class="Pages" >
-          <ul>
-            <li><a href="file:///C:/Users/Xiaomi/Documents/GitHub/kurs/Site(gallery).html"> <h2>Portfolio</h2></a> </li>    
-            <li><a href="file:///C:/Users/Xiaomi/Documents/GitHub/kurs/Site(about.me).html"><h2>About Me</h2></a> </li>    
-            <li><a href="file:///C:/Users/Xiaomi/Documents/GitHub/kurs/Site(contact).html"><h2>Contact</h2></a> </li>    
-          </ul>
-        </div>    
-    </header>
-    <div class="bg">
-
-    </div>
     <footer>
-      <h5>© 2020. Oleg Petrov Prod. KHPI.</h5>
+      <h2 style="font-size: 18px;">© 2020. Oleg Petrov Prod. KHPI.</h2>
     </footer>
 </body>
 
