--- a/Site(about.me).html
+++ b/Site(about.me).html
@@ -10,6 +10,27 @@
         .info_aboutme {  text-align: center; position: relative;}
         .bg_sm { padding-top: 20px; padding-right: 30px; position: relative;}
     </style>
+
+<header>
+    <div class ="logo">
+        <a href="Site(home).html"> <img src="Site/images/General/logo/logo_static.png" style="width: 130px;"></a>
+    </div>
+    <div class = "title">
+        <h1 style="font-size: 45px; padding-top: 10px;">About Me</h1>
+    </div>
+    <div class="SocialNet">  
+        <a href="https://www.instagram.com/_lezhik_ph_/"> <img src="Site/images/General/SocialNet/Instagram.png" style="height: 70px; padding-right: 10px;"></a> 
+        <a href="https://www.facebook.com/profile.php?id=100004142117968"> <img src="Site/images/General/SocialNet/facebook.png"style="height: 70px; padding-right: 10px;"></a>
+        <a href="https://t.me/I_lezhik_I"> <img src="Site/images/General/SocialNet/telegram.png"style="height: 70px;"></a>
+    </div>  
+    <div class="Pages" >
+        <ul>
+          <li><a href="Site(gallery).html"> <h2>Portfolio</h2></a> </li>    
+          <li><a href="Site(about.me).html"><h2>About Me</h2></a> </li>    
+          <li><a href="Site(contact).html"><h2>Contact</h2></a> </li>    
+        </ul>
+      </div>       
+</header>
  <body>
        <!--Preloader animation -->
   
@@ -25,30 +46,10 @@
     loader.style.visibility= "hidden";
   } )
   </script> --> 
-     <header class="bg_hat">
-        <div class ="logo">
-            <a href="file:///C:/Users/Xiaomi/Documents/GitHub/kurs/Site(home).html"> <img src="Site/logo_static.png" style="width: 130px;"></a>
-        </div>
-        <div class = "title">
-            <h1 style="font-size: 45px; padding-top: 10px;">About Me</h1>
-        </div>
-
-        <div class="SocialNet">  
-            <a href="https://www.instagram.com/_lezhik_ph_/"> <img src="Site/SocialNet/Instagram.png" style="height: 70px; padding-right: 10px;"></a> 
-            <a href="https://www.facebook.com/profile.php?id=100004142117968"> <img src="Site/SocialNet/facebook.png"style="height: 70px; padding-right: 10px;"></a>
-            <a href="https://t.me/I_lezhik_I"> <img src="Site/SocialNet/telegram.png"style="height: 70px;"></a>
-        </div>  
-        <div class="Pages" >
-            <ul>
-              <li><a href="file:///C:/Users/Xiaomi/Documents/GitHub/kurs/Site(gallery).html"> <h2>Portfolio</h2></a> </li>    
-              <li><a href="file:///C:/Users/Xiaomi/Documents/GitHub/kurs/Site(about.me).html"><h2>About Me</h2></a> </li>    
-              <li><a href="file:///C:/Users/Xiaomi/Documents/GitHub/kurs/Site(contact).html"><h2>Contact</h2></a> </li>    
-            </ul>
-          </div>       
-    </header>
-    <div class= "bg">
+     
+    <div>
         <p class= "info_aboutme"> 
-            <img src="Site/images/AboutMe.png" class="bg_sm"> 
+            <img src="Site/images/About Me/AboutMe.png" class="bg_sm"> 
             <h4 style="font-size: 30px; color:rgba(177, 44, 238, 0.938);"> Oleg Petrov </h4>
             <p><h4 style="padding-top: 50px; ">Hi! My name is Oleg, but my friends call me take a photo of them!
                 <p style= "padding-top: 20px"> My home is Ukraine. I am studying in Kharkiv Politechnikal University.</p>
@@ -58,7 +59,7 @@
     </div>
     
 </body>
-<footer>
-    <h5>© 2020. Oleg Petrov Prod. KHPI.</h5>
-  </footer>
+    <footer>
+        <h2 style="font-size: 18px;">© 2020. Oleg Petrov Prod. KHPI.</h2>
+    </footer>
 </html>
