--- a/Site(gallery).html
+++ b/Site(gallery).html
@@ -7,10 +7,32 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <style>
-        table { width: 100%; padding-left:10px; padding-top: 50px; }
-        td, th { padding: 10px; }
+        table { width: 100%; padding-top: 25px; padding-bottom: 50px; margin:auto; }
+        td, tr { padding: 10px;  text-align: center; }
     </style>
-    <body>
+
+<header>
+
+    <div class ="logo">
+        <a href="Site(home).html"> <img src="Site/images/General/logo/logo_static.png" style="width: 130px;"></a>
+    </div>
+    <div class = "title">
+        <h1 style="font-size: 45px; padding-top: 10px;">Portfolio</h1> 
+    </div>
+    <div class="SocialNet">  
+        <a href="https://www.instagram.com/_lezhik_ph_/"> <img src="Site/images/General/SocialNet/Instagram.png" style="height: 70px; padding-right: 10px;"></a> 
+        <a href="https://www.facebook.com/profile.php?id=100004142117968"> <img src="Site/images/General/SocialNet/facebook.png"style="height: 70px; padding-right: 10px;"></a>
+        <a href="https://t.me/I_lezhik_I"> <img src="Site/images/General/SocialNet/telegram.png"style="height: 70px;"></a>
+    </div>  
+    <div class="Pages" >
+        <ul>
+          <li><a href="Site(gallery).html"> <h2>Portfolio</h2></a> </li>    
+          <li><a href="Site(about.me).html"><h2>About Me</h2></a> </li>    
+          <li><a href="Site(contact).html"><h2>Contact</h2></a> </li>    
+        </ul>
+      </div>      
+</header>
+<body>
          <!--Preloader animation -->
   
  <!-- <div id="loader"> 
@@ -25,42 +47,21 @@
     loader.style.visibility= "hidden";
   } )
   </script> --> 
-        <header class="bg_hat">
-            <div class ="logo">
-                <a href="file:///C:/Users/Xiaomi/Documents/GitHub/kurs/Site(home).html"> <img src="Site/logo_static.png" style="width: 130px;"></a>
-            </div>
-            <div class = "title">
-                <h1 style="font-size: 45px; padding-top: 10px;">Portfolio</h1> 
-            </div>
-            <div class="SocialNet">  
-                <a href="https://www.instagram.com/_lezhik_ph_/"> <img src="Site/SocialNet/Instagram.png" style="height: 70px; padding-right: 10px;"></a> 
-                <a href="https://www.facebook.com/profile.php?id=100004142117968"> <img src="Site/SocialNet/facebook.png"style="height: 70px; padding-right: 10px;"></a>
-                <a href="https://t.me/I_lezhik_I"> <img src="Site/SocialNet/telegram.png"style="height: 70px;"></a>
-            </div>
-            <div class="Pages" >
-                <ul>
-                  <li><a href="file:///C:/Users/Xiaomi/Documents/GitHub/kurs/Site(gallery).html"> <h2>Portfolio</h2></a> </li>    
-                  <li><a href="file:///C:/Users/Xiaomi/Documents/GitHub/kurs/Site(about.me).html"><h2>About Me</h2></a> </li>    
-                  <li><a href="file:///C:/Users/Xiaomi/Documents/GitHub/kurs/Site(contact).html"><h2>Contact</h2></a> </li>    
-                </ul>
-              </div>        
-        </header>
-            <div class= "bg">
-                <table>
-                    <tr>
-                        <th><img src = "Site/images/3.jpg" height="500px"></th>
-                        <th><img src = "Site/images/IMG_5212.jpg" height="500px"></th>
-                        <th><img src = "Site/images/3_1.jpg"height="500px"></th>
-                    </tr>
-                    <tr>
-                        <th><img src = "Site/images/1.jpg" height="500px"></th>
-                        <th><img src = "Site/images/IMG_5128 с облаками.jpg" height="500px"></th>
-                        <th><img src = "Site/images/6.jpg" height="500px"></th>
-                    </tr>
-                </table> 
-            </div>
-            <footer>
-                <h5>© 2020. Oleg Petrov Prod. KHPI.</h5>
-              </footer>
-    </body>
+        
+<table>
+    <tr>
+        <td><img src = "Site/images/Gallery/3.jpg" height="500px"></td>
+        <td><img src = "Site/images/Gallery/IMG_5212.jpg" height="500px"></td>
+        <td><img src = "Site/images/Gallery/3_1.jpg"height="500px"></td>
+    </tr>
+    <tr>
+        <td><img src = "Site/images/Gallery/1.jpg" height="500px"></td>
+        <td><img src = "Site/images/Gallery/IMG_5128 с облаками.jpg" height="500px"></td>
+        <td><img src = "Site/images/Gallery/6.jpg" height="500px"></td>
+    </tr>
+</table> 
+<footer>
+    <h2 style="font-size: 18px;">© 2020. Oleg Petrov Prod. KHPI.</h2>
+</footer>
+</body>
 </html>
