--- a/Site(about.me).html
+++ b/Site(about.me).html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KURS</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Site/CSS/main.css">
 </head>
     <style>
         .info_aboutme {  text-align: center; position: relative;}
@@ -27,7 +27,7 @@
         <ul>
           <li><a href="Site(gallery).html"> <h2>Portfolio</h2></a> </li>    
           <li><a href="Site(about.me).html"><h2>About Me</h2></a> </li>    
-          <li><a href="Site(contact).html"><h2>Contact</h2></a> </li>    
+          <li><a href="Site(info).html"><h2>Info</h2></a> </li>    
         </ul>
       </div>       
 </header>
@@ -51,8 +51,8 @@
         <p class= "info_aboutme"> 
             <img src="Site/images/About Me/AboutMe.png" class="bg_sm"> 
             <h4 style="font-size: 30px; color:rgba(177, 44, 238, 0.938);"> Oleg Petrov </h4>
-            <p><h4 style="padding-top: 50px; ">Hi! My name is Oleg, but my friends call me take a photo of them!
-                <p style= "padding-top: 20px"> My home is Ukraine. I am studying in Kharkiv Politechnikal University.</p>
+            <h4><p style="padding-top: 50px;"> Hi! My name is Oleg, but my friends call me take a photo of them! </p>
+                <p style= "padding-top: 20px;"> My home is Ukraine. I am studying in Kharkiv Politechnikal University.</p>
                 <p style= "padding-top: 20px"> DM me if you want the best photos on the Earth!</p> </h4>
             </p>      
         </p>
@@ -60,6 +60,6 @@
     
 </body>
     <footer>
-        <h2 style="font-size: 18px;">© 2020. Oleg Petrov Prod. KHPI.</h2>
+        <h2 style="font-size: 18px; color: white;">© 2020. Oleg Petrov Prod. KHPI.</h2>
     </footer>
 </html>
