--- a/Site(gallery).html
+++ b/Site(gallery).html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>KURS</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="Site/CSS/main.css">
     </head>
     <style>
-        table { width: 100%; padding-top: 25px; padding-bottom: 50px; margin:auto; }
+        table { width: 100%; padding-top: 25px; padding-bottom: 50px; margin:auto;}
         td, tr { padding: 10px;  text-align: center; }
     </style>
 
@@ -28,7 +28,7 @@
         <ul>
           <li><a href="Site(gallery).html"> <h2>Portfolio</h2></a> </li>    
           <li><a href="Site(about.me).html"><h2>About Me</h2></a> </li>    
-          <li><a href="Site(contact).html"><h2>Contact</h2></a> </li>    
+          <li><a href="Site(info).html"><h2>Info</h2></a> </li>    
         </ul>
       </div>      
 </header>
@@ -60,8 +60,9 @@
         <td><img src = "Site/images/Gallery/6.jpg" height="500px"></td>
     </tr>
 </table> 
-<footer>
-    <h2 style="font-size: 18px;">© 2020. Oleg Petrov Prod. KHPI.</h2>
-</footer>
+
 </body>
+<footer>
+    <h2 style="font-size: 18px; color: white;">© 2020. Oleg Petrov Prod. KHPI.</h2>
+</footer>
 </html>
