--- a/Site(home).html
+++ b/Site(home).html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KURS</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Site/CSS/main.css">
 
-  <style>
-  </style>
 </head>
 
 <header>
@@ -27,7 +25,7 @@
     <ul>
       <li><a href="Site(gallery).html"> <h2>Portfolio</h2></a> </li>    
       <li><a href="Site(about.me).html"><h2>About Me</h2></a> </li>    
-      <li><a href="Site(contact).html"><h2>Contact</h2></a> </li>    
+      <li><a href="Site(info).html"><h2>Info</h2></a> </li>    
     </ul>
   </div>    
 </header>
@@ -46,9 +44,11 @@
     loader.style.visibility= "hidden";
   } )
   </script> --> 
-    <footer>
-      <h2 style="font-size: 18px;">© 2020. Oleg Petrov Prod. KHPI.</h2>
-    </footer>
+
+    
 </body>
+<footer>
+  <h2 style="font-size: 18px; color: white;">© 2020. Oleg Petrov Prod. KHPI.</h2>
+</footer>
 
 </html>
