--- a/Site(info).html
+++ b/Site(info).html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KURS</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Site/CSS/main.css">
 </head>
 
 <header >
@@ -23,7 +23,7 @@
   <ul>
     <li><a href="Site(gallery).html"> <h2>Portfolio</h2></a> </li>    
     <li><a href="Site(about.me).html"><h2>About Me</h2></a> </li>    
-    <li><a href="Site(contact).html"><h2>Contact</h2></a> </li>    
+    <li><a href="Site(info).html"><h2>Info</h2></a> </li>    
   </ul>
 </div>   
 </header>
@@ -43,11 +43,9 @@
   } )
   </script> --> 
 
- <div class="bg">
-   
- </div>
- <footer>
-  <h2 style="font-size: 18px;">© 2020. Oleg Petrov Prod. KHPI.</h2>
- </footer> 
+
 </body>
+<footer>
+  <h2 style="font-size: 18px; color: white;">© 2020. Oleg Petrov Prod. KHPI.</h2>
+ </footer> 
 </html>
