--- a/Site(home).html
+++ b/Site(home).html
@@ -8,26 +8,34 @@
 
 </head>
 
+<style>
+  .info_aboutme { text-align: center; position: relative;}
+  .bg_sm { padding-top: 1vw;  position: relative; width: 60vw;}
+</style>
+
 <header>
-  <div class="SocialNet">  
-    <a href="https://www.instagram.com/_lezhik_ph_/"> <img src="Site/images/General/SocialNet/Instagram.png" style="height: 70px; padding-right: 10px;"></a> 
-    <a href="https://www.facebook.com/profile.php?id=100004142117968"> <img src="Site/images/General/SocialNet/facebook.png"style="height: 70px; padding-right: 10px;"></a>
-    <a href="https://t.me/I_lezhik_I"> <img src="Site/images/General/SocialNet/telegram.png"style="height: 70px;"></a>
-</div>    
+    
 <div class ="logo">
-  <a href="Site(home).html"> <img src="Site/images/General/logo/logo_static.png" style="width: 130px;"></a>
+  <a href="Site(home).html"> <img src="Site/images/General/logo/logo_static.png" style="width:8.5vw;"></a>
 </div> 
    <div class="title">
      <h3> PHOTOGRAPHER / VIDEOGRAPHER</h3>
      <h1> Oleg Petrov</h1>
    </div>
+  
    <div class="Pages" >
     <ul>
       <li><a href="Site(gallery).html"> <h2>Portfolio</h2></a> </li>    
       <li><a href="Site(about.me).html"><h2>About Me</h2></a> </li>    
-      <li><a href="Site(info).html"><h2>Info</h2></a> </li>    
+      <li><a href="Site(price).html"><h2>Price</h2></a> </li>    
     </ul>
-  </div>    
+  </div>
+  <div class="SocialNet">  
+    <a href="https://www.instagram.com/_lezhik_ph_/"> <img src="Site/images/General/SocialNet/Instagram.png" style="width: 5vw; "></a> 
+    <a href="https://www.facebook.com/profile.php?id=100004142117968"> <img src="Site/images/General/SocialNet/facebook.png"style="width: 5vw; "></a>
+    <a href="https://t.me/I_lezhik_I"> <img src="Site/images/General/SocialNet/telegram.png"style="width: 5vw;"></a>
+</div>  
+  
 </header>
 <body>
   <!--Preloader animation -->
@@ -45,10 +53,20 @@
   } )
   </script> --> 
 
-    
+  <div>
+    <p class= "info_aboutme"> 
+        <img src="Site/images/About Me/AboutMe.png" class="bg_sm"> 
+        <h4 style=" color:rgba(177, 44, 238, 0.938);"> Oleg Petrov </h4>
+        <h4><p style="padding-top: 3vw;"> Hi! My name is Oleg, but my friends call me take a photo of them! </p>
+            <p style= "padding-top: 1vw;"> My home is Ukraine. I am studying in Kharkiv Politechnikal University.</p>
+            <p style= "padding-top: 1vw"> DM me if you want the best photos on the Earth!</p> </h4>
+        </p>      
+    </p>
+</div> 
+  
 </body>
 <footer>
-  <h2 style="font-size: 18px; color: white;">© 2020. Oleg Petrov Prod. KHPI.</h2>
+  <h2 style="font-size: 1vw ; color: white; text-align: center;">© 2020. Oleg Petrov Prod. KHPI.</h2>
 </footer>
 
 </html>
