--- a/Site(price).html
+++ b/Site(price).html
@@ -9,23 +9,23 @@
 
 <header >
   <div class ="logo">
-    <a href="Site(home).html"> <img src="Site/images/General/logo/logo_static.png" style="width: 130px;"></a>
+    <a href="Site(home).html"> <img src="Site/images/General/logo/logo_static.png" style="width:8.5vw;"></a>S
 </div>
 <div class = "title">
-    <h1 style="font-size: 45px; padding-top: 10px;">Contact</h1> 
+    <h1>Price</h1> 
 </div>
-<div class="SocialNet">  
-  <a href="https://www.instagram.com/_lezhik_ph_/"> <img src="Site/images/General/SocialNet/Instagram.png" style="height: 70px; padding-right: 10px;"></a> 
-  <a href="https://www.facebook.com/profile.php?id=100004142117968"> <img src="Site/images/General/SocialNet/facebook.png"style="height: 70px; padding-right: 10px;"></a>
-  <a href="https://t.me/I_lezhik_I"> <img src="Site/images/General/SocialNet/telegram.png"style="height: 70px;"></a>
-</div>  
 <div class="Pages" >
   <ul>
     <li><a href="Site(gallery).html"> <h2>Portfolio</h2></a> </li>    
     <li><a href="Site(about.me).html"><h2>About Me</h2></a> </li>    
-    <li><a href="Site(info).html"><h2>Info</h2></a> </li>    
+    <li><a href="Site(price).html"><h2>Price</h2></a> </li>    
   </ul>
-</div>   
+</div>
+<div class="SocialNet">  
+  <a href="https://www.instagram.com/_lezhik_ph_/"> <img src="Site/images/General/SocialNet/Instagram.png" style="width: 5vw; "></a> 
+  <a href="https://www.facebook.com/profile.php?id=100004142117968"> <img src="Site/images/General/SocialNet/facebook.png"style="width: 5vw; "></a>
+  <a href="https://t.me/I_lezhik_I"> <img src="Site/images/General/SocialNet/telegram.png"style="width: 5vw;"></a>
+</div>  
 </header>
 <body>
      <!--Preloader animation -->
@@ -46,6 +46,6 @@
 
 </body>
 <footer>
-  <h2 style="font-size: 18px; color: white;">© 2020. Oleg Petrov Prod. KHPI.</h2>
- </footer> 
+  <h2 style="font-size: 1vw ; color: white; text-align: center;">© 2020. Oleg Petrov Prod. KHPI.</h2>
+</footer>
 </html>
