--- a/pr9/pr9_(metki).html
+++ b/pr9/pr9_(metki).html
@@ -45,13 +45,14 @@
     </div>
 
     <div> 
+        <h2 style="text-align: center; color:white; background-color: rgba(0, 0, 0, 0.8)"><a name = "Portfolio" style="overflow: visible;"></a> Portfolio </h2>
         <div class = "pr9_people">
-            <h2 style="text-align: center; color:white; background-color: rgba(0, 0, 0, 0.8)"><a name = "Portfolio" style="overflow: visible;"></a> Portfolio </h2>
+            
             <img src="images/1.jpg" alt="1" style="height: 400px;">
             <img src="images/IMG_5128 с облаками.jpg" alt="2" style="height: 400px;">
             <img src="images/3_1.jpg" alt="3" style="height: 400px;">
         </div>
-        <div class = "pr9_ba">
+        <div class = "pr9_people">
             <img src="images/liza_1.jpg" alt="4" style="height: 300px;">
             <img src="images/vika_1.jpg" alt="5" style="height: 300px; padding-left: 20px;"> 
         </div>
