--- a/pr9/pr9_collage.html
+++ b/pr9/pr9_collage.html
@@ -6,15 +6,22 @@
     <title>KURS</title>
     <link rel="stylesheet" href="pr9.css">
 </head>
+
+<style>
+.line1 {position: absolute; left: 30%; padding-top: 1vw;}
+.line1 img {width: 20vw;}
+.line2 {padding-top: 14vw; text-align: center; width: 100%;}
+.line2 img { width:20vw; padding-left: 1vw; vertical-align: middle;}
+</style>
 <body>
-    <div class = "pr9_people">
-        <img src="images/1.jpg" alt="1" style="height: 400px;">
-        <img src="images/IMG_5128 с облаками.jpg" alt="2" style="height: 400px;">
-        <img src="images/3_1.jpg" alt="3" style="height: 400px;">
+    <div class = "line1">
+        <img src="images/liza_1.jpg" >
+        <img src="images/vika_1.jpg" > 
     </div>
-    <div class = "pr9_ba">
-        <img src="images/liza_1.jpg" alt="4" style="height: 300px;">
-        <img src="images/vika_1.jpg" alt="5" style="height: 300px; padding-left: 20px;"> 
+    <div class = "line2">
+        <img src="images/1.jpg">
+        <img src="images/IMG_5128 с облаками.jpg">
+        <img src="images/3_1.jpg" >
     </div>
     
 </body>
